--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: free_flow
-description: A new Flutter project.
+description: An aggressive photography diary application.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  english_words: ^4.0.0
   provider: ^6.0.0
+  english_words: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # others
   getwidget: ^3.1.1
 
 dev_dependencies:
