--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,10 @@ dependencies:
     sdk: flutter
 
   provider: ^6.0.0
-  english_words: ^4.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
-  # others
-  getwidget: ^3.1.1
+  sqflite: ^2.2.8+4
+  path: ^1.8.3
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
