--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
@@ -37,6 +37,7 @@ dependencies:
   path: ^1.8.3
   uuid: ^3.0.7
   intl: ^0.18.1
+  camera: ^0.10.5+2
 
 dev_dependencies:
   flutter_test:
