--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   camera: ^0.10.5+2
   table_calendar: ^3.0.9
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
